--- a/client/package.json
+++ b/client/package.json
@@ -1,20 +1,25 @@
 {
-    "name": "client",
-    "version": "0.1.0",
-    "private": true,
-    "proxy": "http://localhost:5000/",
+    "name": "react-menu",
+    "version": "1.0.0",
+    "description": "React based air quality dashboard with user management",
+    "author": "Christopher Wille",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/cwille2012/airquality-react.git"
+    },
     "dependencies": {
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "react-scripts": "1.1.1"
+        "react-router-dom": "4.1.1",
+        "react-dom": "15.5.3",
+        "react": "15.5.3"
+    },
+    "devDependencies": {
+        "css-loader": "^0.28.10",
+        "react-scripts": "1.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
-    },
-    "devDependencies": {
-        "concurrently": "^3.5.1"
     }
 }
