--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "react-web-server",
     "version": "1.0.0",
     "scripts": {
-        "client": "cd client && yarn start",
+        "client": "cd client && react-scripts start",
         "server": "nodemon server.js",
-        "start": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+        "start": "concurrently --kill-others-on-fail \"yarn server\" \"cd client && npm start\""
     },
     "dependencies": {
         "express": "^4.16.2"
