--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,9 @@
         "url": "https://github.com/cwille2012/airquality-react.git"
     },
     "dependencies": {
-        "react-router-dom": "4.1.1",
+        "react": "15.5.3",
         "react-dom": "15.5.3",
-        "react": "15.5.3"
+        "react-router-dom": "4.1.1"
     },
     "devDependencies": {
         "css-loader": "^0.28.10",
