--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
     },
     "dependencies": {
         "body-parser": "^1.18.2",
+        "connect-mongo": "0.8.2",
+        "cookie-parser": "^1.4.3",
         "cors": "^2.8.4",
+        "crypto": "^1.0.1",
+        "emailjs": "^2.0.0",
+        "errorhandler": "^1.5.0",
         "express": "^4.16.2",
-        "mongodb": "^3.0.4"
+        "express-session": "^1.15.6",
+        "moment": "^2.21.0",
+        "mongodb": "2.2.19"
     },
     "devDependencies": {
         "concurrently": "^3.5.1"
